# rust_frontend

./: .env  Cargo.toml  README.md
migrations/2024-03-21-020614_hackerclone/: down.sql  up.sql
src/: main.rs  models.rs
templates/: base.html  index.html  login.html  signup.html  submission.html
